# codenames

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  RUNBOOK-SELFMANAGED.md  experiments.md  flake.nix  game_viewer.html  package-lock.json  package.json  play.py  pyproject.toml  run_and_view.py
.claude/: experiments.md
configs/: codenames-cluegiver.toml  endpoints.toml
configs/codenames/: rl-30b-instruct.toml  rl-30b-selfmanaged.toml  rl-30b-thinking.toml  rl-30b-xml.toml  rl-4b-instruct.toml  rl-4b-selfmanaged.toml  rl-4b-xml.toml  rl-9b-selfmanaged.toml  rl-multiturn-selfplay-35b-eff2x.toml  rl-multiturn-selfplay-4b-eff2x.toml  rl-multiturn-selfplay-4b-fresh.toml  rl-multiturn-selfplay-4b-gated-format.toml  rl-multiturn-selfplay-4b-opponent.toml  rl-multiturn-selfplay-4b-race-binary-curriculum.toml  rl-multiturn-selfplay-4b-race-binary.toml  rl-multiturn-selfplay-4b-race-convex.toml  rl-multiturn-selfplay-4b-race.toml  rl-multiturn-selfplay-4b-resume.toml  rl-multiturn-selfplay-4b.toml  rl-qwen35-4b.toml  rl-qwen35-9b.toml  rl-resume-sf6x.toml  rl-selfplay-30b-moe.toml  rl-selfplay-30b-xml.toml  rl-selfplay-4b-adapter.toml  rl-selfplay-4b-thinking.toml  rl-selfplay-4b-xml.toml  rl-selfplay.toml  rl.toml  (+1 more)
environments/codenames/: README.md  pyproject.toml
environments/codenames/.prime/: .env-metadata.json
environments/codenames/codenames/: __init__.py  codenames.py  game.py  multiagent.py  types.py  wordpool.py
environments/codenames/tests/: test_dry_runs.py
src/: bench.ts  board.ts  cli.ts  debug-turn.ts  game.ts  index.ts  model.ts  types.ts  wordpool.ts
(+8 files in other folders)
