[project]
name = "codenames"
description = "PrimeIntellect Codenames environment for evaluation and RL training"
tags = ["games", "rl", "eval"]
version = "0.5.2"
requires-python = ">=3.10,<3.14"
dependencies = [
    "verifiers>=0.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codenames"]

[tool.hatch.build.targets.sdist]
include = [
    "/codenames",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]
